fix: fixed overflow

--- a/resources/scss/admin/partials/_table.scss
+++ b/resources/scss/admin/partials/_table.scss
@@ -1,4 +1,6 @@
 table{
+  max-height: 70%;
+  overflow-y: auto;
   tr{
     th, td{
       font-size: calc(0.8rem + 0.2vw);
